# ChessBot

./: .gitignore  CMakeLists.txt
include/chess/: bitboard.h  board.h  movegen.h  types.h  util.h  zobrist.h
include/engine/: evaluate.h  move_orderer.h  move_orderer_alternative.h  opening_book.h  options.h  search.h  transposition.h  uci.h
include/utils/: threadpool.h
src/: CMakeLists.txt
src/chess/: bitboard.cpp  board.cpp  calculate_pins.cpp  movegen.cpp  zobrist.cpp
src/chess/movegen/: diagonal_sliders.cpp  king.cpp  knight.cpp  orthogonal_sliders.cpp  pawn.cpp
src/engine/: evaluate.cpp  move_orderer.cpp  search.cpp  time.cpp  transposition.cpp  uci.cpp
src/engine/search/: capture-only.cpp  negamax.cpp
src/utils/: threadpool.cpp
tests/: CMakeLists.txt  attack_table_test.cpp  perft_multithreaded.cpp  perft_test.cpp  zobrist_test.cpp
tools/: CMakeLists.txt
